# portfolio-analytics

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.yaml  pyproject.toml  requirements-ci.txt  requirements-lint.txt  requirements.txt  setup.cfg
.github/workflows/: main.yaml
pfa/: __main__.py  db.py  db_admin.py  id_cache.py  readwrite.py  ref_data.yaml
pfa/analytics/: bayesian_ridge.py  calculated_metrics.py  data_manipulation.py  forecast.py  prophet.py  sklearn.py  validation.py  xgboost.py
pfa/dash/: app.py  figure.py  run.py
pfa/dash/pages/: index.py  (+1 more)
pfa/models/: config.py  currency_config.py  date.py  date_config.py  map.py  metric.py  metric_config.py  model.py  parameter_config.py  parameter_values.py  portfolio.py  portfolio_config.py  portfolio_stock_map.py  stock_config.py  stock_values.py  values.py  views.py
pfa/web_access/: datahub.py  update.py  update_and_cache.py  yahoo_finance.py
pfa/workflows/: forecast.py  initialise.py  run_analytics.py  update.py  validation.py  views.py
ref_data/: analytics_config.csv  currency_config.csv  metric_config.csv  parameter_config.csv  portfolio.csv  portfolio_config.csv  portfolio_stock_map.csv  stock_config.csv
sl-dash/: Home.py
sl-dash/pages/: 1_Historical_Stock_Performance.py  2_Stock_Forecasting.py  3_Portfolio_Performance.py
sl-dash/utils/: dropdown_data.py
sl_dash/: Home.py
sl_dash/pages/: 1_Historical_Stock_Performance.py
sl_dash/utils/: load_db_config.py
tests/unit/: conftest.py  test_db_admin.py  test_readwrite.py
tests/utilities/: dataframe.py  db_mocks.py
(+5 files in other folders)
