[tool.poetry]
name = "portfolio analytics"
version = "0.0.1"
description = ""
authors = ["Oscar Riordan"]

packages = [
    {include = "pfa"}
]

[tool.poetry.dependencies]
python = "=>3.8"
sqlalchemy = "^1.4.3"
sqlalchemy-utils = "^0.38.2"
sqlalchemy-views = "^0.3.1"
pandas = "=1.3.5"
prefect = "^1.2.2"
datapackage = "^1.15.2"
yfinance = "^0.1.72"
xgboost = "^1.6.1"
scikit-learn = "^1.1"
dash = "^2.5.1"
prophet = "1.0.1"
dash_bootstrap_components = "^1.1.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "21.9b0"
flake8 = "^4.0.1"
isort = "=5.6.4"
pytest = "^7.1.2"
pytest_mock = "^3.7.0"
pre-commit = "^2.19.0"
