[metadata]
name = pfa
version = 0.0.1
description =
keywords =
classifiers =
    Natural Language :: English

[options]
python_requires =
test_suite = tests
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pandas
    prophet
    xgboost

[options.entry_points]
console_scripts =
    pfa = pfa.main:pfa

[flake8]
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
exclude =
    .git,
    __pycache__,
    docs,
    venv

[isort]
profile = black
force_single_line = True
